welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value gris
  var couleur=gris
              ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur==false) {
  ^